--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,5 +1,5 @@
 .py-base {
-    padding-block: var(--py-base);
+    padding: var(--py-base);
 }
 
 .py-lg {
@@ -34,8 +34,16 @@
     display: flex;
 }
 
+.items-center {
+    align-items: center;
+}
+
 .gap-1 {
     gap: 1rem;
+}
+
+.gap-1\.5 {
+    gap: 1.5rem;
 }
 
 .grid {
